validatePasswordFormat test created

--- a/public/forgotPassword.html
+++ b/public/forgotPassword.html
@@ -24,21 +24,25 @@
          <p class="new_password">NUEVA CONTRASEÑA</p>
 
          <div class="inputs__container">
-            <input class="inputs__container--newPassword" type="password" placeholder="Nueva clave" required>
-            <img class="inputs__container--check" src="../src/assets/eye-gray-close.png" alt="Ocultar clave">
+            <input id="password" class="inputs__container--newPassword" type="password" placeholder="Nueva clave"
+               required>
+            <img id="eyeImage" class="inputs__container--open" src="../src/assets/eye-gray-open.png"
+               alt="Ocultar clave">
          </div>
 
          <div class="inputs__container">
-            <input class="inputs__container--confirm" type="password" placeholder="Confirmar clave" required>
-            <img class="inputs__containe--eye" src="../src/assets/eye-gray-close.png" alt="Ocultar clave">
+            <input id="passwordConfirm" class="inputs__container--confirm" type="password" placeholder="Confirmar clave"
+               required>
+            <img id="eyeImageConfirm" class="inputs__container--open" src="../src/assets/eye-gray-open.png"
+               alt="Ocultar clave">
          </div>
 
          <div class="list__container">
             <ul class="list">
-               <li class="list__item--length">8 caracteres alfanuméricos</li>
-               <li class="list__item--upper">1 mayúscula</li>
-               <li class="list__item--lower">1 minúscula</li>
-               <li class="list__item--special">1 símbolo @#!?</li>
+               <li id="length" class="list__item--length">8 caracteres alfanuméricos</li>
+               <li id="upperCase" class="list__item--upper">1 mayúscula</li>
+               <li id="lowerCase" class="list__item--lower">1 minúscula</li>
+               <li id="specialCase" class="list__item--special">1 símbolo @#!?</li>
             </ul>
          </div>
 
